src/main.scss
/* ... */
.saltire-badge.disabled {
  filter: grayscale(1);
  opacity: 0.5;
}

.page .content-break {
  position: relative;
  svg {
    position: absolute;
    left: 0;
    top: 0;
    width: 100%;
    height: $unit/2;
  }
}

.sidebar {
  border: 1px solid rgba(0, 0, 0, 0.12);
  .menu {
    box-shadow: none;
    .menu-item a {
      border-radius: 0 $unit*2 $unit*2 0;
      margin-right: 0;
    }
  }
}
.sidebar,
.dropdown {
  .menu {
    padding: 0;
    .menu-item a {
      .fa-fw {
        margin-right: $unit*.9;
      }
    }
    .active {
      color: $primary-color;
      font-weight: $heading-font-weight;
      .fal {
        font-weight: 500;
      }
      .far {
        font-weight: 600;
      }
    }
  }
}

.menu .menu-item>a.active {
  background-color: $primary-color;
  color: white;
}
.menu .menu-item>a:focus,
.menu .menu-item>a:hover,
.menu .menu-item>a:active {
  background-color: $primary-color-dark;
  color: white;
}

.sidebar-not-present {
  margin-top: -($unit);
  .body .container {
    padding-top: $unit*3;
    padding-bottom: $unit*3;
    max-width: $page-width;
    margin: 0 auto;
  }
}
.sidebar-present {
  clear: both;
  .sidebar,
  .body {
    margin-top: -($unit);
  }
  .sidebar,
  .body .container {
    padding-top: $unit*2;
    padding-bottom: $unit*3;
  }
  .body .container {
    max-width: $page-width;
    margin: 0;
  }
  .empty {
    padding-left: 0;
    padding-right: 0;
    .empty-icon,
    .empty-title,
    .empty-subtitle,
    .empty-action {
      max-width: $page-width;
      margin-left: 0;
    }
  }
}

.caption {
  font-size: 92%;
}

form {
  position: relative;
}

.authentication-form {
  padding: $unit*1.5 0;
  min-height: 15vh;
  max-width: 500px !important;
  margin: 0 auto;
  position: relative;
  .middle-line-text {
    margin: $unit*2 0 $unit*2;
    border-bottom: 2px solid $gray-color;
    line-height: 0;
    text-align: center;
    vertical-align: middle;
    span {
      padding: $unit;
      color: #555;
    }
  }
  .social .btn {
    height: $unit*2.5;
    border: none;
  }
  .btn {
    position: relative;
    display: block;
    margin-bottom: $unit/2;
    width: 100%;
    color: white;
    // line-height: $unit*3;
    // height: $unit*3;
    .fa-2x {
      position: absolute;
      top: $unit/2;
      left: $unit/2;
    }
    .google-logo {
      top: .6rem;
      img {
        float: left;
        width: 28px;
        padding: $unit/4;
        background: white;
        border-radius: 3px;
      }
    }
  }
  #sign-in-message,
  #sign-up-message,
  #reset-password-message {
    display: none;
    a {
      font-weight: $heading-font-weight;
    }
  }
}
#sign-out-form {
  justify-content: center;
  align-items: center;
  .loading {
    display: flex;
  }
}
form {
  #active-form-message {
    display: none;
    a {
      font-weight: $heading-font-weight;
    }
  }
}

.card-header .organisation {
  margin-bottom: 0;
}

.pagination {
  justify-content: center;
}

.social .btn, .social-button {
  height: $unit*2.5;
  border: none;
  position: relative;
  display: block;
  margin-bottom: $unit/2;
  width: 100%;
  color: white;
  .fa-2x {
    position: absolute;
    top: $unit/2;
    left: $unit/2;
  }
  .google-logo {
    top: .6rem;
    img {
      float: left;
      width: 28px;
      padding: $unit/4;
      background: white;
      border-radius: 3px;
    }
  }
}

.chip.bg-google,
#continue-with-google {
  background-color: #DB3633 !important;
}
.chip.bg-twitter,
#continue-with-twitter {
  background-color: #007DA3 !important;
}
.chip.bg-facebook,
#continue-with-facebook {
  background-color: #2C5797 !important;
}
#link-unlink {
  .chip {
    color: white !important;
    border: none;
    cursor: pointer;
    outline: none;
    display: block;
    .fa-fw {
      margin-right: $unit/4;
    }
  }
}

.card-loader {
  position: absolute;
  width: 100%;
  height: 100%;
  top: 0;
  left: 0;
  display: none;
  .card-loader-background {
    display: block;
    position: absolute;
    height: 100%;
    width: 100%;
    top: 0;
    left: 0;
    opacity: 1;
  }
  .card-loader-inner {
    display: flex;
    align-items: center;
    justify-content: center;
    height: 100%;
    width: 100%;
  }
}

.authentication-form {
  .btn {
    color: white;
    text-align: center;
  }
}

.header-image {
  margin-top: -($unit);
  margin-bottom: -($unit);
  background-size: cover;
  background-repeat: no-repeat;
  background-position: center 38%;
  min-height: $home-splash-height;
  .header-image-overlay {
    position: relative;
    width: 100%;
    // background: linear-gradient(178deg, rgba(255,255,255,0.95) 0%,rgba(255,255,255,0.25) 100%);
    min-height: $home-splash-height;
    svg.bottom {
      position: absolute;
      bottom: 0;
      left: 0;
      width: 100%;
      height: $unit*2;
    }
  }
  .container {
    min-height: $home-splash-height;
    margin-top: 0;
    padding: 0;
    display: flex;
    align-items: flex-end;
    justify-content: center;
    text-align: center;
  }
}

ul.fa-ul {
  margin-left: $unit*1.3333;
}

.faded-overflow {
  overflow: hidden;
  &:before {
    background: linear-gradient(rgba(236, 242, 233, 0), rgba(236, 242, 233, 1));
  }
}

.search-form {
  .input-group {
    .form-select {
      flex: 0 0 auto
    }
  }
  .btn-lg {
    width: 100%;
  }
}

.cards.equal-height {
  .column {
    padding-bottom: 0.8rem;
  }
}
.equal-height {
  .card {
    height: 100%;
  }
  .fa-ul.hours {
    margin-top: 0;
    margin-bottom: 0;
  }
}
.contact.equal-height {
  .card-body {
    padding: 0;
  }
}
/* ... */

